ui_tests/example.stderr
error: mismatched types: a:Last[{ type error }] b:Last[!0_0]
  ┌─ main.box:9:16
  │
9 │         field: new Last { blah: a },
  │                ^^^^^^^^^^^^^^^^^^^^

error: unexpected amount of generic args provided
  ┌─ main.box:9:20
  │
9 │         field: new Last { blah: a },
  │                    ^^^^ Expected 1 args

